Correctly aligned boxes in bio page

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -55,6 +55,7 @@ header h3 {
 }
 
 h4 {
+  align: center;
   font-family: sans-serif;
   font-size: 16px;
   text-indent: 50px;
@@ -64,11 +65,9 @@ h4 {
   hyphens: auto;
   box-sizing: content-box;
   margin: 40px;
-  width: 600px;
   border-radius: 25px;
   border: 25px white;
   padding: 15px;
-  margin-left: auto;
   background-color: grey;
 }
 
@@ -85,4 +84,8 @@ a {
 
 a:hover {
   color: white;
+}
+
+div p:nth-child(5) {
+
 }
